--- a/public/developer.html
+++ b/public/developer.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html class='v2' dir='ltr' lang='en-US' xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
 	<head>
-		<title>YAZKY_SHIPAZU</title>
+		<title>r3ba</title>
 <meta content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' name='viewport'/>
 <link href='https://i.imgur.com/l5UJMh8.png' rel='shortcut icon' type='image/x-icon'/>
-<meta content='https://www.whatsapp.me/01581503858/' property='og:image'/>
+<meta content='https://www.whatsapp.me/01581503858' property='og:image'/>
 <meta content='https://cliffbotbeluga@gmail.com/' ='og:url'/>
 <meta content='website' property='og:type'/>
 <meta content='CliffVincent' property='og:title'/>
