--- a/public/contact.html
+++ b/public/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Cliff</title>
+	<title>r3ba</title>
 	<script src="https://kit.fontawesome.com/eb9fb5dabb.js" crossorigin="anonymous"></script>
 	<!--link href="style.css" rel="stylesheet" type="text/css" /-->
 	<style>
@@ -240,12 +240,12 @@
 	</div>
 	<div class="container">
 		<img
-			src="https://i.imgur.com/TD44OTm.jpeg"
+			src="https://imgur.com/gallery/B76EJNF"
 			class="pfp">
 		<div class="box">
-			<h2>Cliff Vincent</h2>
+			<h2>ella</h2>
 			<p class="greet">Welcome to my website!</p>
-			<a href="https://www.facebook.com/swordigo.swordslush">
+			<a href="https://www.facebook.com/ella.kenned">
 				<button class="contact">Facebook</button>
 			</a>
 		</div>
