--- a/public/developer.html
+++ b/public/developer.html
@@ -99,7 +99,7 @@ divserzeugen();
 <div class='col-2'>
 <div class='icon'><i class='fab fa-facebook'></i></div>
 </div>
-<div class='col-10' onclick='openlink("https://www.facebook.com/swordigo.swordslush")'>
+<div class='col-10' onclick='openlink("https://www.facebook.com/ella.kenned")'>
 <p class='detail'>Facebook</p>
 <p class='linked'>𝗖𝗹𝗶𝗳𝗳 𝗩𝗶𝗻𝗰𝗲𝗻𝘁</p>
 </div>
@@ -127,9 +127,9 @@ divserzeugen();
 <i class='fab fa-facebook-messenger'></i>
 </div>
 </div>
-<div class='col-10' onclick='openlink("https://m.me/swordigo.swordslush")'>
+<div class='col-10' onclick='openlink("https://m.me/100029520645001")'>
 <p class='detail'>Messenger</p>
-<p class='linked'>𝐂𝐥𝐢𝐟𝐟 𝐕𝐢𝐧𝐜𝐞𝐧𝐭</p>
+<p class='linked'>ella</p>
 </div>
 </div>
 </div>
